[gd_scene load_steps=3 format=2]

[ext_resource path="res://demo/wallets/GetWallet.gd" type="Script" id=1]
[ext_resource path="res://demo/shared/ErrorBox.tscn" type="PackedScene" id=2]

[node name="Get" type="HBoxContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource( 1 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
margin_right = 496.0
margin_bottom = 600.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="MBox-Request" type="MarginContainer" parent="VBoxContainer"]
margin_right = 496.0
margin_bottom = 298.0
rect_pivot_offset = Vector2( -232, -220 )
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/margin_right = 16
custom_constants/margin_top = 8
custom_constants/margin_left = 16
custom_constants/margin_bottom = 8

[node name="GridContainer" type="GridContainer" parent="VBoxContainer/MBox-Request"]
margin_left = 16.0
margin_top = 8.0
margin_right = 480.0
margin_bottom = 290.0
size_flags_horizontal = 5
size_flags_vertical = 5
custom_constants/vseparation = 8
custom_constants/hseparation = 16
columns = 2

[node name="Label-v04" type="Label" parent="VBoxContainer/MBox-Request/GridContainer"]
margin_top = 5.0
margin_right = 120.0
margin_bottom = 19.0
rect_min_size = Vector2( 120, 0 )
text = "Wallet Id"

[node name="WalletIdInput" type="LineEdit" parent="VBoxContainer/MBox-Request/GridContainer"]
unique_name_in_owner = true
margin_left = 136.0
margin_right = 464.0
margin_bottom = 24.0
rect_min_size = Vector2( 160, 0 )
size_flags_horizontal = 3
caret_blink = true
caret_blink_speed = 0.5

[node name="Space-v01" type="Label" parent="VBoxContainer/MBox-Request/GridContainer"]
margin_top = 35.0
margin_right = 120.0
margin_bottom = 49.0
rect_min_size = Vector2( 120, 0 )

[node name="SubmitButton" type="Button" parent="VBoxContainer/MBox-Request/GridContainer"]
unique_name_in_owner = true
margin_left = 136.0
margin_top = 32.0
margin_right = 464.0
margin_bottom = 52.0
size_flags_horizontal = 3
text = "Submit"

[node name="MBox-Result-Balance" type="MarginContainer" parent="VBoxContainer"]
margin_top = 302.0
margin_right = 496.0
margin_bottom = 600.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/margin_right = 16
custom_constants/margin_top = 8
custom_constants/margin_left = 16
custom_constants/margin_bottom = 8

[node name="BalErrorBox" parent="VBoxContainer/MBox-Result-Balance" instance=ExtResource( 2 )]
unique_name_in_owner = true
margin_bottom = 290.0

[node name="BalResultBox" type="ScrollContainer" parent="VBoxContainer/MBox-Result-Balance"]
unique_name_in_owner = true
margin_left = 16.0
margin_top = 8.0
margin_right = 480.0
margin_bottom = 290.0

[node name="BalanceList" type="VBoxContainer" parent="VBoxContainer/MBox-Result-Balance/BalResultBox"]
unique_name_in_owner = true
margin_right = 464.0
size_flags_horizontal = 3

[node name="HSeparator-v01" type="VSeparator" parent="."]
margin_left = 500.0
margin_right = 524.0
margin_bottom = 600.0
custom_constants/separation = 24

[node name="MBox-Result" type="MarginContainer" parent="."]
margin_left = 528.0
margin_right = 1024.0
margin_bottom = 600.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/margin_right = 16
custom_constants/margin_top = 8
custom_constants/margin_left = 16
custom_constants/margin_bottom = 8

[node name="TxnErrorBox" parent="MBox-Result" instance=ExtResource( 2 )]
unique_name_in_owner = true

[node name="TxnResultBox" type="ScrollContainer" parent="MBox-Result"]
unique_name_in_owner = true
margin_left = 16.0
margin_top = 8.0
margin_right = 480.0
margin_bottom = 592.0

[node name="TransactionList" type="VBoxContainer" parent="MBox-Result/TxnResultBox"]
unique_name_in_owner = true
margin_right = 464.0
size_flags_horizontal = 3
custom_constants/separation = 24
